# edu-advent-2019

./: .gitignore  LICENSE  README.md  advent.cabal
app/: Main.hs
src/: Advent.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  IntCode.hs  Utils.hs
